# mobiledevice-mcp-zed-extension

./: .gitattributes  .gitignore  .typos.toml  CHANGELOG.md  CI_CD_FILES_SUMMARY.txt  CI_CD_SETUP.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  extension.toml  extension.wasm  justfile
.github/: CI_CD_GUIDE.md  PULL_REQUEST_TEMPLATE.md  QUICK_START.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  release.yml
configuration/: default_settings.jsonc  installation_instructions.md
docs/: ANDROID_IMPLEMENTATION.md  CROSS_PLATFORM.md  FEATURE_PARITY.md  IOS_IMPLEMENTATION.md  PUBLISHING.md  WINDOWS_SUPPORT.md
scripts/: build-extension.sh  build.sh  dev.sh  install-dev.sh  install-extension.sh  install-manual.sh  rename-tools.sh  test-all-tools.sh  test-mcp.sh  test-tools.sh  verify-installation.sh
src/: lib.rs  main.rs  types.rs
src/devices/: android.rs  ios.rs  mod.rs
src/mcp/: mod.rs  protocol.rs
src/tools/: definitions.rs  handlers.rs  mod.rs
tests/: mcp_protocol_tests.rs
